--- a/src/main/resources/jenkins/plugin/assembla/AssemblaProjectProperty/help-backtrackEnabled.html
+++ b/src/main/resources/jenkins/plugin/assembla/AssemblaProjectProperty/help-backtrackEnabled.html
@@ -1,3 +1,3 @@
 <div>
-  Enable/Disable backtracking
+  Check to allow Jenkins to post a comment to Assembla with the build number which integrates the given ticket.
 </div>
